# OpenMP-K-Means

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.slurm  output.csv  run-desktop.sh
Results/: Runtime Calculations (numbers).numbers
Results/mpi/: Runtime Calculations (numbers).numbers  output.csv
Results/openmp/: Runtime Calculations (numbers).numbers
src/: deprecated-mpi-only-main.cpp  normal-main.cpp
src/mpi/: MPISolver.cpp  MPISolver.hpp  MPITester.cpp  MPITester.hpp
src/omp/: OpenMPSolver.cpp  OpenMPSolver.hpp
src/serial/: SerialSolver.cpp  SerialSolver.hpp
src/shared/: CentroidValidator.hpp  DataSet.cpp  DataSet.hpp  DualOutputStream.hpp  Instrumentation.cpp  Instrumentation.hpp  Logging.hpp  Point.cpp  Point.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
